src/main/java/com/example/dnd_backend/gateway/api/errors/CharacterNotFoundException.java
package com.example.dnd_backend.gateway.api.errors;

public class CharacterNotFoundException extends RuntimeException {
    public CharacterNotFoundException(String characterName) {
        super("Character with name " + characterName + " not found");
    }
}
